LUT-30594 Actions Column Button Layout Issue with Long input fields

--- a/webapp/css/admin/plugins/appointment/appointment.css
+++ b/webapp/css/admin/plugins/appointment/appointment.css
@@ -102,3 +102,5 @@ input[type="color"]:hover{
 
 #sticky-container{ min-height: 450vh; }
 #info-right{ position: sticky; top: 60px }
+
+td.appt-actions, th.appt-actions { white-space: nowrap; }
